fix icons not showing due ns1:href namespace
Summary:
Use the `icon()` helper instead. I believe the root cause was due to using
`document.createElement()` followed by `.html()` to get the HTML and re-insert
it to the DOM.

Test Plan:
Before, missing icons on splash and newly added road modals:

{F170229196}

{F170229197}

After:

{F170229354}

{F170229356}

Reviewers: gaoxm, clarkben

Reviewed By: gaoxm

Differential Revision: https://phabricator.intern.facebook.com/D16429126

Signature: 16429126:1563834093:3a466be86044038d5fc88340e9ab477790f59d14

--- a/css/80_app_fb.css
+++ b/css/80_app_fb.css
@@ -91,6 +91,10 @@ button.fb-roads-toggle.layer-off use {
     border: 0px; 
 }
 
+.modal-rapid .modal-section .logo-rapid {
+    fill: white;
+}
+
 .modal-rapid p {
     font-size: 14px; 
 }
